--- a/frontend/templates/listar.html
+++ b/frontend/templates/listar.html
@@ -39,7 +39,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    {% if Cartas %}
+    {% if cartas %}
     <table border="1" class="table table-striped table-dark">
       <thead>
         <tr>
@@ -51,7 +51,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for carta in Cartas %}
+        {% for carta in cartas %}
         <tr>
           <td>{{ carta.nome }}</td>
           <td>{{ carta.ataque }}</td>
